<resources>
    <string name="app_name">SAROBMED</string>
    <string name="prompt_email">Email</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="login">Login</string>
    <string name="password_hint">Password</string>
    <string name="login_title">SAROBMED</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="synced">Synced Reports</string>
    <string name="unsynced">Unsynced Reports</string>
    <string name="sarobmed_full_title">Search and Rescue Observatory for the Mediterranean</string>
    <string name="unsaved_reports">Unsaved Reports</string>
    <string name="incomplete_reports">Incomplete Reports</string>
    <string name="sample_report_title">Proactiva: Rescue of 57 people in the Western Mediterranean</string>
    <string name="sample_report_location">Western Mediterranean</string>
    <string name="sample_report_date">12/10/2018</string>
    <string name="reporter_details">Reporter Details</string>
    <string name="location_details">Location Details</string>
    <string name="edit_reporter_hint">Reporter</string>
    <string name="edit_organisation_hint">SAR Organisation</string>
    <string name="form_picker_title">Create Search And Rescue Form</string>
    <string name="reporter_details_title">Reporter Details</string>
    <string name="incident_details">Incident Details</string>
    <string name="actor_details">Actor Details</string>
    <string name="fatalities_details">Fatalities Details</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="incident_details_title">Incident Details</string>
    <string name="edit_shorttitle_hint">Short Title</string>
    <string name="edit_dateofmission_hint">Date of Mission</string>
    <string name="edit_timeoffirstinfoget_hint">Time of first information received</string>
    <string name="edit_startTimeOfFirstSighting_hint">Starting time of first sighting</string>
    <string name="edit_endTimeOfMission_hint">End time of monitoring mission</string>
    <string name="Edit_missionDesc_hint">Mission Description</string>
    <string name="edit_sarAsset_hint">SAR Asset</string>
    <string name="edit_numberOfMigrantBoats_hint">Number of migrant boats</string>
    <string name="edit_migrantTypeOfBoats_hint">Type of migrant boats</string>
    <string name="edit_migrantBoatIdentifiers_hint">Identifiers of the migrant boats</string>
    <string name="edit_migrantNoOfPeoplePerBoat_hint">Number of people per boat</string>
    <string name="edit_seaAndWeatherConditions_hint">Sea and weather conditions</string>
    <string name="edit_otherVesselsInVicinity_hint">Other vessels in the vicinity</string>
    <string name="edit_sourceOfFirstInfo_hint">Source of first information</string>
    <string name="edit_mediaOfCommunication_hint">Media Of Communication</string>
    <string name="edit_meansOfBoatDetection_hint">Means of boat detection</string>
    <string name="edit_coordOnScene_hint">On-Scene coordination</string>
    <string name="edit_coordOverall_hint">Overall coordination</string>
    <string name="edit_coordOrderToSARVessel_hint">Orders given to SAR vessel</string>
    <string name="edit_supportingEvidence_hint">Supporting evidence</string>
    <string name="location_details_title">Location Details</string>
    <string name="edit_posOfVesselLong_hint">Position of vessel in distress (Longitude)</string>
    <string name="edit_posOfVesselLat_hint">Position of vessel in distress (Latitude)</string>
    <string name="current_location_title">Use Current Location</string>
    <string name="edit_locationDescription_hint">Location description</string>
    <string name="edit_approxDistanceFromCoastline_hint">Approximate distance from coastline</string>
    <string name="edit_assumedPointOfDeparture_hint">Assumed point of departure of migrant boats</string>
    <string name="short_title_not_set">Short title has not been set</string>
    <string name="location_not_set">Location has not been set</string>
    <string name="edit_shipActors_hint">By Hull Number and Flag</string>
    <string name="edit_shipActor_dialogTitle">Add Ship Actor By Hull and Flag</string>
    <string name="edit_dialog_hullNumber_hint">Hull Number</string>
    <string name="edit_dialog_flag_hint">Flag</string>
    <string name="edit_dialog_addShipActorButton">Add Ship Actor</string>
    <string name="euwarship">EU Member State Warship Flag</string>
    <string name="euairship">EU Member State Aircraft Flag</string>
    <string name="euno_vessel">EUNAVFORMED Vessel Flag</string>
    <string name="frontexVessel">FRONTEX Vessel Flag</string>
    <string name="frontexAircraft">FRONTEX Aircraft Flag</string>
    <string name="natoVessel">NATO Vessel Flag</string>
    <string name="natoAircraft">NATO Aircraft Flag</string>
    <string name="otherNGO">Other NGO(s)</string>
    <string name="cargoShipAsset">Cargo Ship(s)</string>
    <string name="eunoAircraft">EUNAVFORMED Aircraft Flag</string>
    <string name="byassetActors">By Asset / Institution Type</string>
    <string name="intimidation">Intimidation</string>
    <string name="noneuBoarding">Violent Boarding by non-EU Authority</string>
    <string name="blockEu">Blockade by EU Authority</string>
    <string name="blockNoneu">Blockade by non-EU Authority</string>
    <string name="stayawayEu">Order to stay away by EU Authority</string>
    <string name="stayawayNoneu">Order to stay away by non-EU</string>
    <string name="standdownEU">Order to stand down by EU</string>
    <string name="standdownnoneu">Order to stand down by non-EU</string>
    <string name="direct_interference_with_rescue">Direct interference with rescue</string>
    <string name="action_against_survivors">Action against survivors</string>
    <string name="action_against_ngo_s">Post-Mission Action against NGO(s)</string>
    <string name="totConfirmDead_hint">Total number of confirmed deaths</string>
    <string name="totEstimateDeadMissing_hint">Estimated number of dead / missing persons</string>
    <string name="deadPrior_hint">Fatalities prior to SAR</string>
    <string name="deadDuring_hint">Fatalities during SAR</string>
    <string name="deadAfter_hint">Fatalities post SAR</string>
    <string name="edit_sar_title">Edit Search And Rescue Form</string>
</resources>
