<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.FormPickerFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_reporter_details"
            style="@style/AddFormListTitleCard"
            android:layout_width="match_parent"
            android:layout_height="100dp">

            <TextView
                style="@style/AddFormListTitle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/reporter_details" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_incident_details"
            style="@style/AddFormListTitleCard"
            android:layout_width="match_parent"
            android:layout_height="100dp">

            <TextView
                style="@style/AddFormListTitle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/incident_details" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_location_details"
            style="@style/AddFormListTitleCard"
            android:layout_width="match_parent"
            android:layout_height="100dp">

            <TextView
                style="@style/AddFormListTitle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/location_details" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_actor_details"
            style="@style/AddFormListTitleCard"
            android:layout_width="match_parent"
            android:layout_height="100dp">

            <TextView
                style="@style/AddFormListTitle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/actor_details" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_fatalities_details"
            style="@style/AddFormListTitleCard"
            android:layout_width="match_parent"
            android:layout_height="100dp">

            <TextView
                style="@style/AddFormListTitle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/fatalities_details" />

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</FrameLayout>