<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/AddFormLayout">
                <EditText
                    android:id="@+id/edit_totConfirmDead"
                    style="@style/AddFormEditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/totConfirmDead_hint"
                    android:inputType="number"
                    android:importantForAutofill="no" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/AddFormLayout">
                <EditText
                    android:id="@+id/edit_totEstimateDeadMissing"
                    style="@style/AddFormEditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/totEstimateDeadMissing_hint"
                    android:inputType="number"
                    android:importantForAutofill="no" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/AddFormLayout">
                <EditText
                    android:id="@+id/edit_deadPrior"
                    style="@style/AddFormEditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/deadPrior_hint"
                    android:inputType="number"
                    android:importantForAutofill="no" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/AddFormLayout">
                <EditText
                    android:id="@+id/edit_deadDuring"
                    style="@style/AddFormEditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/deadDuring_hint"
                    android:inputType="number"
                    android:importantForAutofill="no" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/AddFormLayout">
                <EditText
                    android:id="@+id/edit_deadAfter"
                    style="@style/AddFormEditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/deadAfter_hint"
                    android:inputType="number"
                    android:importantForAutofill="no" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>