<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/edit_dialog_shipActorRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:theme="@style/AddFormLayout">

            <EditText
                android:id="@+id/edit_dialog_hullNumber"
                style="@style/AddFormEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edit_dialog_hullNumber_hint"
                android:importantForAutofill="no"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:theme="@style/AddFormLayout">

            <EditText
                android:id="@+id/edit_dialog_flag"
                style="@style/AddFormEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edit_dialog_flag_hint"
                android:importantForAutofill="no"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <Button
        android:id="@+id/edit_dialog_addShipActor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/edit_dialog_addShipActorButton" />

</LinearLayout>